// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when the withValidations HOC wraps a component matches the snapshot when the HOC is passed an anonymous component with no name or display name 1`] = `
<Component
  hasError={false}
  hasInfo={false}
  hasWarning={false}
  info={Array []}
  name="foo"
  onBlur={[Function]}
  onChange={[Function]}
  useValidationIcon={true}
  validations={Array []}
  warnings={Array []}
/>
`;

exports[`when the withValidations HOC wraps a component matches the snapshot with the input component wrapped in the HOC with default props 1`] = `
<MockComponent
  hasError={false}
  hasInfo={false}
  hasWarning={false}
  info={Array []}
  name="foo "
  onBlur={[Function]}
  onChange={[Function]}
  useValidationIcon={true}
  validations={Array []}
  warnings={Array []}
/>
`;
